--- a/front-end/src/assets/base.css
+++ b/front-end/src/assets/base.css
@@ -7,10 +7,12 @@
   font-weight: normal;
 }
 
+html {
+}
+
 body {
-  min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background-color: rgb(136, 179, 67, 0.2);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
